--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hello</string>
+    <string name="app_name">Smile</string>
     <string name="say_hello">Say Hello</string>
     <string name="please_enter_your_name">Please enter your name</string>
 </resources>
