--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Library</string>
+    <string name="author">Author :</string>
+    <string name="book_name">book name</string>
+    <string name="pages">Pages :</string>
+    <string name="add_to_reading_books">Add to reading books</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="add_to_wishlist">Add to wishlist</string>
+    <string name="add_to_have_read">Add to have read</string>
+    <string name="title">Title :</string>
 </resources>
